
* The PIDE document model maintains file content independently of the
status of jEdit editor buffers. Reloading jEdit buffers no longer causes
changes of formal document content. Theory dependencies are always
resolved internally, without the need for corresponding editor buffers.
The system option "jedit_auto_load" has been discontinued: it is
effectively always enabled.


*** HOL ***

* Dropped aliasses RangeP, DomainP for Rangep, Domainp respectively.
INCOMPATIBILITY.

* Dropped abbreviations transP, antisymP, single_valuedP;
use constants transp, antisymp, single_valuedp instead.
INCOMPATIBILITY.

* Algebraic type class hierarchy of euclidean (semi)rings in HOL:
euclidean_(semi)ring, euclidean_(semi)ring_cancel,
unique_euclidean_(semi)ring; instantiation requires
provision of a euclidean size.

* Reworking of theory Euclidean_Algorithm in session HOL-Number_Theory:
  - Euclidean induction is available as rule eucl_induct;
  - Constants Euclidean_Algorithm.gcd, Euclidean_Algorithm.lcm,
    Euclidean_Algorithm.Gcd and Euclidean_Algorithm.Lcm allow
    easy instantiation of euclidean (semi)rings as GCD (semi)rings.
  - Coefficients obtained by extended euclidean algorithm are
    available as "bezout_coefficients".
INCOMPATIBILITY.

* Named collection mod_simps covers various congruence rules
concerning mod, replacing former zmod_simps.
INCOMPATIBILITY.

* Swapped orientation of congruence rules mod_add_left_eq,
mod_add_right_eq, mod_add_eq, mod_mult_left_eq, mod_mult_right_eq,
mod_mult_eq, mod_minus_eq, mod_diff_left_eq, mod_diff_right_eq,
mod_diff_eq.  INCOMPATIBILITY.

* Generalized some facts:
    zminus_zmod ~> mod_minus_eq
    zdiff_zmod_left ~> mod_diff_left_eq
    zdiff_zmod_right ~> mod_diff_right_eq
    zmod_eq_dvd_iff ~> mod_eq_dvd_iff
INCOMPATIBILITY.

* (Co)datatype package:
  - The 'size_gen_o_map' lemma is no longer generated for datatypes
    with type class annotations. As a result, the tactic that derives