@@ -11,7 +11,7 @@ import isabelle._
 
 import scala.swing.{Button, TextArea, Label, ListView, Alignment,
   ScrollPane, Component, CheckBox, BorderPanel}
-import scala.swing.event.{MouseClicked, MouseMoved}
+import scala.swing.event.{ButtonClicked, MouseClicked, MouseMoved}
 
 import java.awt.{BorderLayout, Graphics2D, Color, Point, Dimension}
 import javax.swing.{JList, BorderFactory, UIManager}
@@ -72,13 +72,18 @@ class Theories_Dockable(view: View, position: String) extends Dockable(view, pos
     session_phase.text = " " + phase_text(phase) + " "
   }
 
+  private val purge = new Button("Purge") {
+    tooltip = "Restrict document model to theories required for open editor buffers"
+    reactions += { case ButtonClicked(_) => PIDE.editor.purge() }
+  }
+
   private val continuous_checking = new Isabelle.Continuous_Checking
   continuous_checking.focusable = false
 
   private val logic = JEdit_Sessions.logic_selector(true)
 
   private val controls =
-    new Wrap_Panel(Wrap_Panel.Alignment.Right)(continuous_checking, session_phase, logic)
+    new Wrap_Panel(Wrap_Panel.Alignment.Right)(purge, continuous_checking, session_phase, logic)
   add(controls.peer, BorderLayout.NORTH)
 
 
